Fix haze nav button and validation in airquality & visibility

--- a/src/app/routes/decks/haze/haze.component.scss
+++ b/src/app/routes/decks/haze/haze.component.scss
@@ -1,4 +1,1 @@
-#navWrapper {
-  width: 100%;
-  text-align: center;
-}
+
